# RPi.GPIO-stubs

./: README.md  pyproject.toml  requirements.txt
RPi/GPIO/: __init__.pyi
